<!--
  ~ Copyright 2025 Sweden Connect
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>se.swedenconnect.oidf</groupId>
        <artifactId>openid-federation-parent</artifactId>
        <version>0.5.6</version>
    </parent>
    <artifactId>oidf-entity-registry-parent</artifactId>
    <packaging>pom</packaging>
    <version>${service-revision}</version>

    <name>Sweden Connect :: OpenID Federation :: Entity Registry :: Parent POM</name>
    <description>Parent POM for Sweden Connect OpenID Federation Entity Registry</description>
    <url>https://www.swedenconnect.se</url>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:https://github.com/swedenconnect/oidf-entity-registry.git</connection>
        <developerConnection>scm:git:https://github.com/swedenconnect/oidf-entity-registry.git</developerConnection>
        <url>https://github.com/swedenconnect/oidf-entity-registry/tree/main</url>
    </scm>

    <organization>
        <name>Sweden Connect</name>
        <url>https://www.swedenconnect.se</url>
    </organization>

    <developers>
        <developer>
            <name>Per Fredrik Plars</name>
            <email>extern.perfredik.plars@digg.se</email>
            <organization>Digg</organization>
            <organizationUrl>https://www.digg.se</organizationUrl>
        </developer>

        <developer>
            <name>David Goldring</name>
            <email>extern.david.goldring@digg.se</email>
            <organization>Digg</organization>
            <organizationUrl>https://www.digg.se</organizationUrl>
        </developer>
    </developers>

    <properties>
        <!-- Project properties -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>

        <service-revision>0.5.10-SNAPSHOT</service-revision>
    </properties>

    <repositories>
        <repository>
            <id>github</id>
            <name>Github Swedenconnect Common</name>
            <url>https://maven.pkg.github.com/swedenconnect/*</url>
        </repository>
    </repositories>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

    <modules>
        <module>service</module>
    </modules>
    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.1.0</version>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
